[build-system]
requires = [
    "setuptools>=68",
    "pybind11>=2.10.0",
    "cmake>=3.20",
    "scikit-build>=0.17.6",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ['auto64']
manylinux-x86_64-image = "manylinux_2_28"
skip = ['pp*', 'cp36-*', '*musllinux*']
build-verbosity = 1
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
